Creacion pags user

--- a/WebContent/CSS/directorioAer.css
+++ b/WebContent/CSS/directorioAer.css
@@ -4,7 +4,7 @@ body {
     background-position: center center;
     background-attachment: fixed;
     /*Se queda en el centro no se mueve*/
-    background-image: url(../Recursos/FondoWinery1.jpg);
+    background-image: url(../Recursos/fondAer.jpg);
 }
 
 .tg {
