--- a/WebContent/CSS/directorio9ci.css
+++ b/WebContent/CSS/directorio9ci.css
@@ -4,7 +4,7 @@ body {
     background-position: center center;
     background-attachment: fixed;
     /*Se queda en el centro no se mueve*/
-    background-image: url(../Recursos/FondoWinery1.jpg);
+    background-image: url(../Recursos/fon9cito.jpg);
 }
 
 .tg {
@@ -66,71 +66,6 @@ body {
     float: left;
     margin-top: 1.80%;
     font-size: 150%;
-<<<<<<< HEAD
-}
-
-label {
-    font-weight: bold;
-    background-color: rgb(255, 255, 255, 0.50);
-}
-
-#busqueda {
-    float: rigth;
-    font-size: 150%;
-}
-
-p {
-    text-align: center;
-    font-weight: bold;
-    background-color: rgb(255, 255, 255, 0.50);
-    font-size: 200%;
-}
-
-#reset {
-    clear: both;
-    float: left;
-    margin-left: 42%;
-    margin-bottom: 1%;
-}
-
-#add {
-    clear: both;
-    float: left;
-    margin-left: 44%;
-    margin-bottom: 1%;
-}
-
-b {
-    clear: both;
-    float: left;
-    margin-left: 40%;
-    margin-bottom: 1%;
-    margin-top: 6%;
-    background-color: rgb(255, 255, 255, 0.9);
-    border: black thick solid;
-    padding: 3%;
-    border-radius: 25px;
-    font-size: 130%;
-}
-
-#volver {
-    float: left;
-    margin-left: 5%;
-    width: 10%;
-}
-
-#volver img {
-    width: 100%;
-}
-
-#volver img:hover {
-    width: 120%;
-}
-
-#volver:hover {
-    margin-left: 4%;
-    margin-right: 1%;
-=======
     margin-left: 25%;
     margin-right: 10%;
 }
@@ -190,5 +125,4 @@ b {
 
 #volver img:hover {
     width: 51%;
->>>>>>> branch 'Desarrollo-CCS' of https://github.com/FlorencioP/Pr-ctica-de-laboratorio-01-Servlets-JSP-y-JDBC.git
 }
