--- a/WebContent/CSS/directorio9ci.css
+++ b/WebContent/CSS/directorio9ci.css
@@ -66,7 +66,7 @@ body {
     float: left;
     margin-top: 1.80%;
     font-size: 150%;
-    margin-left: 25%;
+    margin-left: 38%;
     margin-right: 10%;
 }
 
@@ -125,4 +125,55 @@ b {
 
 #volver img:hover {
     width: 51%;
+}
+
+#verpedidos {
+    clear: both;
+    float: left;
+    margin-left: 37%;
+    margin-right:5%;
+}
+
+#crear{
+    padding-top:2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#pantalla{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+
+#OpsAdm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#editProd{
+    padding-right: 3%;
+    padding-left: 3%;
+}
+
+#OpsBusca{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1{
+    background-color: rgb(255, 255, 255, 0.75);
+    text-align:center;
+}
+
+#formularioM{
+    justify-content: center;
+    align-items: center;
 }
